<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".CentroAyuda">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="349dp"
                    android:layout_height="126dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="65dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="¿Cómo funciona una tabla de comunicació?"
                    android:textColor="@color/_bg__centroayudaframe8_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/primertextocentro"
                    android:layout_width="332dp"
                    android:layout_height="210dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="Inter"
                    android:text="@string/primertextocentro_string"
                    android:textColor="@color/_bg__centroayudaframe8_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/segundotextocentro"
                    android:layout_width="332dp"
                    android:layout_height="249dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal|center"
                    android:fontFamily="Inter"
                    android:text="@string/segundotextocentro_string"
                    android:textColor="@color/_bg__centroayudaframe8_color"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/tcomunic"
                    android:layout_gravity="center_horizontal|center"/>

                <TextView
                    android:id="@+id/tercertexto"
                    android:layout_width="339dp"
                    android:layout_height="253dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="Inter"
                    android:text="@string/tercertexto_string"
                    android:textColor="@color/_bg__centroayudaframe8_color"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal|center"/>
            </LinearLayout>
        </ScrollView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbatras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/barra_color"
            android:clickable="true"
            android:contentDescription="@string/floating"
            android:onClick="callAtras"
            app:backgroundTint="@color/barrahome2_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.97"
            app:srcCompat="@drawable/ic_baseline_subdirectory_arrow_left_24"
            tools:ignore="OnClick" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>