<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ayuda">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="677dp"
        android:layout_above="@+id/bottom_navigator"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ayudita"
                android:layout_width="367dp"
                android:layout_height="54dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/ayudita_string"
                android:textColor="@color/_bg__ayuda_color"
                android:layout_gravity="center_horizontal|center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="554dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/primertexto"
                    android:layout_width="367dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_horizontal|center"
                    android:text="@string/primertexto_string"
                    android:textColor="@color/_bg__ayuda_color"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="355dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="05dp"
                        android:background="@drawable/centroayudaboton"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:onClick="callCentroAyuda"
                        app:backgroundTint="@null" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/segundotexto"
                            android:layout_width="342dp"
                            android:layout_height="145dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="05dp"
                            android:text="@string/segundotexto_string"
                            android:textColor="@color/_bg__ayuda_color"
                            android:layout_gravity="center_horizontal|center"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="342dp"
                                android:layout_height="145dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="05dp"
                                android:fontFamily="sans-serif-black"
                                android:text="DictaTEA@dicta.tea"
                                android:textColor="@color/barrahome2_color"
                                android:layout_gravity="center_horizontal|center"
                                android:textSize="20dp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/barrahome2_color"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu" />


</RelativeLayout>